--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,10 @@
 <head>
     <meta charset='utf-8'>
     <title>Pixel Animation</title>
+    <link rel='stylesheet' href='css/index.css'>
 </head>
 <body>
+
+    <script src='js/index.js'></script>
 </body>
 </html>
