--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,10 @@
 <head>
     <meta charset='utf-8'>
     <title>Pixel Animation</title>
-    <link rel='stylesheet' href='css/index.css'>
+    <link rel='stylesheet' href='public/css/index.css'>
 </head>
 <body>
 
-    <script src='js/obtainImageData.js'></script>
-    <script src='js/index.js'></script>
+    <script src='dist/bundle.js'></script>
 </body>
 </html>
